welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!estFaceMur()) {
	avance();
}
for comp <- 1 to 7 {
	gauche();
	avance();
	droite();
	avance();
}

